<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/fullscreenBackgroundColor"
        android:theme="@style/ThemeOverlay.SmartKids.FullscreenContainer"
        tools:context=".view.SettingsFragment"
        >

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/fullscreenBackgroundColor"
                android:padding="@dimen/item_content_padding"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_cv_main_marginStartEnd"
                android:layout_marginEnd="@dimen/item_cv_main_marginStartEnd"
                app:cardCornerRadius="@dimen/item_cv_corner_radius"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="?attr/fullscreenBackgroundColor"
                    android:padding="@dimen/item_content_padding">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/cv_image"
                        android:layout_width="@dimen/item_circular_image_size"
                        android:layout_height="@dimen/item_circular_image_size"
                        android:contentDescription="@string/image_content_description"
                        android:src="@mipmap/ic_launcher_round"
                        app:civ_border_color="@color/circular_image_border_color"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/item_cv_main_marginStartEnd"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/item_title_textSize"
                            android:textStyle="bold"
                            tools:text = "Name" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/item_description_text_color"
                            android:textSize="@dimen/item_description_textSize"
                            android:textStyle="bold"
                            tools:text = "Email" />


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_myProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_profit"
                android:paddingLeft="@dimen/item_left_padding"
                android:textColor="@color/yellowSecondary"
                android:textSize="@dimen/item_textSize"
                android:textStyle="bold"
                android:layout_marginTop="60dp"/>
            <TextView
                android:id="@+id/tv_myMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_message"
                android:paddingLeft="@dimen/item_left_padding"
                android:textColor="@color/yellowSecondary"
                android:textSize="@dimen/item_textSize"
                android:textStyle="bold"
                android:layout_marginTop="60dp"/>

            <TextView
                android:paddingLeft="@dimen/item_left_padding"
                android:id="@+id/tv_logOut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/log_out"
                android:paddingTop="40dp"
                android:textColor="@color/yellowPrimary"
                android:textSize="@dimen/item_textSize"
                android:textStyle="bold"
                android:layout_marginTop="60dp"/>

        </LinearLayout>
    </FrameLayout>
</layout>