<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.SmartKids.FullscreenContainer"
        android:background="?attr/fullscreenBackgroundColor"
        tools:context=".view.MyProfileFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
            android:background="?attr/fullscreenBackgroundColor"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
                android:gravity="center"
                android:text="My Profile"
                android:textSize="24dp"
                android:textFontWeight="600"
                android:textColor="@color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/fullscreenBackgroundColor"
                    android:orientation="vertical"
                    android:padding="@dimen/card_view_layout_content_padding">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etPassword1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etPassword2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/card_view_layout_content_padding">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_place_image"
                            android:layout_width="@dimen/add_kid_place_image_size"
                            android:layout_height="@dimen/add_kid_place_image_size"
                            android:layout_marginTop="@dimen/add_kid_place_image_marginTop"
                            android:background="@drawable/shape_image_view_border"
                            android:padding="@dimen/add_kid_place_image_padding"
                            android:scaleType="centerCrop"
                            android:src="@drawable/add_kid_image_placeholder"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_current_location" />

                        <TextView
                            android:id="@+id/tv_add_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/add_kid_text_add_image_marginTop"
                            android:background="?attr/selectableItemBackground"
                            android:gravity="center"
                            android:padding="@dimen/add_kid_text_add_image_padding"
                            android:text="@string/text_add_image"
                            android:textColor="@color/white"
                            android:textSize="@dimen/add_kid_text_add_image_textSize"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:backgroundTint="@null"
                        android:layout_marginStart="@dimen/btn_marginStartEnd"
                        android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                        android:layout_marginEnd="@dimen/btn_marginStartEnd"
                        android:background="@drawable/shape_button_rounded_my_profile"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text="@string/save"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/btn_text_size" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </FrameLayout>
</layout>